# stock-trading

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: pipeline.yml
render/: app.py
