[tool.poetry]
name = "stock-trading"
version = "0.1.0"
description = ""
authors = ["Jelle Vegter <jelle.vegter@nederlandseloterij.nl>"]
packages = [
    { include = "common" },
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.9.10"
requests = "^2.28.1"
db-sqlite3 = "^0.0.1"
pandas = "^1.5.2"
lxml = "^4.9.2"
yahoo-fin = "^0.8.9"
dash = "^2.8.0"
dash-bootstrap-components = "^1.3.0"
dash-bootstrap-templates = "^1.0.7"
pandas-datareader = "^0.10.0"
nbformat = "^5.7.3"
boto3 = "^1.26.89"
yfinance = "^0.2.12"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.21.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
